--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,70 @@
-.App {
-  text-align: center;
+@import url("https://fonts.googleapis.com/css?family=Muli&display=swap");
+
+body {
+  background-image: url(https://wallpaperaccess.com/full/352084.jpg);
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
+}
+html{
+  height: 100%
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.qrcode-app {
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  padding-top: 15px;
+  gap: 20px;
 }
 
-.App-link {
-  color: #61dafb;
+h2 {
+  font: "Muli", sans-serif;
+  font-size: 40px;
+  font-weight: 600;
+  color: floralwhite;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.creator input {
+  width: 280px;
+  height: 30px;
+  font-size: 24px;
+  padding-left: 5px;
+}
+
+button {
+  position: relative;
+  height: 37px;
+  width: 100px;
+  font-size: 18px;
+  top: -2px;
+  border: none;
+  background-color: rgb(17, 216, 223);
+  color: rgb(240, 240, 240);
+  cursor: pointer;
+  border-radius: 4px;
+  margin-left: 4px;
+}
+
+.qr-image { 
+  align-items: center;
+  gap: 25px;
+}
+
+
+@media screen and (max-width:450px) {
+  .creator input{
+    width: 180px;
+  height: 30px;
   }
-  to {
-    transform: rotate(360deg);
+}
+
+@media screen and (max-width:320px) {
+  button{
+    margin-top: 8px;
+  }
+  img{
+    width:180px;
+    height: 180px;
   }
 }
